--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -61,6 +61,7 @@ body
             position: absolute
             left: 0
             top: 8.5px
+            cursor: pointer
     &__line
         width: 16px
         height: 1px
