--- a/sass/blocks/_background.sass
+++ b/sass/blocks/_background.sass
@@ -2,5 +2,5 @@
     &__image
         width: 100%
         margin-top: 50px
-        max-height: 380px
+        min-height: 700px
         object-fit: cover
