--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,5 @@
 @import "blocks/_header.sass"
 @import "blocks/_background.sass"
 @import "blocks/_mobile.sass"
+@import "blocks/_hero.sass"
 @import "_media.sass"
