--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -96,6 +96,8 @@
         &__greetings
             &-second
                 flex-direction: column
+                padding-right: 30px
+                padding-left: 30px
             &-avatar
                 height: 100px
                 width: 100px
@@ -106,9 +108,19 @@
                 margin-top: 20px
                 font-size: 14px
                 margin-bottom: 17px
+                margin-left: 0
+        &__post
+            &-content
+                font-size: 14px
 @media (max-width: 450px)
     .hero
         &__greetings
             &-avatar
                 height: 80px
                 width: 80px
+            &-second
+                padding-left: 20px
+                padding-right: 20px
+        &__post
+            padding-left: 20px
+            padding-right: 20px
