fix: small fixes

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -83,6 +83,10 @@
         &__greetings
             &-avatar
                 width: 150px
+    .header
+        &__mobile
+            &-menu
+                margin-left: 0px
 @media (max-width: 500px)
     .header
         &__search-block
