create: footer added

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,4 +2,5 @@
 @import "blocks/_background.sass"
 @import "blocks/_mobile.sass"
 @import "blocks/_hero.sass"
+@import "blocks/_footer.sass"
 @import "_media.sass"
