--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -105,7 +105,7 @@
             &-avatar
                 height: 100px
                 width: 100px
-                object-fit: none
+                object-fit: cover
                 border-radius: 50%
                 object-position: center 55%
             &-span
