--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -57,7 +57,7 @@
             justify-content: space-between
             text-align: justify
         &-span
-            font-family: 'Roboto'
+            font-family: 'East Sea Dokdo', cursive
             font-weight: 400
             font-size: 18px
             line-height: 21px
