--- a/admin/css/style-home.css
+++ b/admin/css/style-home.css
@@ -6,8 +6,9 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-left: -400px;
+    margin-left: -120px;
     margin-top: -107.5px;
+    color: white;
 }
 .form{
     display: flex;
