--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -95,3 +95,13 @@
             line-height: 21px
             color: #262626
             text-align: justify
+.news
+    display: flex
+    flex-direction: column
+    align-items: center
+    &-right
+        margin-top: 30px
+        width: 100%
+    &-image
+        width: 100%
+        object-fit: cover
