fix: small fixes

--- a/sass/_css-small-back.sass
+++ b/sass/_css-small-back.sass
@@ -7,20 +7,12 @@
     &-images
         display: flex
         width: 100%
-        justify-content: space-between
+        justify-content: center
     &-image
-        &-one
-            width: 400px
-            height: 300px
-            object-fit: contain
         &-second
             width: 400px
             height: 300px
             object-fit: contain
             margin-left: -10px
-        &-third
-            width: 400px
-            height: 300px
-            object-fit: contain
 h2, h3
     color: #262626
