--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -31,7 +31,9 @@ body
         font-family: 'Roboto'
         font-size: 12px
         line-height: 14px
-        color: #BFBFBF
+        color: #262626
+        &::placeholder
+            color: #BFBFBF
         &-block
             position: relative
             width: 330px
